<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instituicao"
            android:textSize="40dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/loginInstituicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Login"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/senhaInstituicao"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Senha"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/nomeInstituicao"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nome da Instituição"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/cnpjfInstituicao"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CNPJ da Instituição"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/enderecoInstituicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Endereço da Instituição"
            android:textSize="20dp" />

        <!--<Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Raio para doação"></Spinner>-->

        <EditText
            android:id="@+id/contatoInstituicao"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contato da Instituição"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/itens_instituicao" />

        <CheckBox
            android:id="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/intem1"/>

        <CheckBox
            android:id="@+id/item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/intem2"/>

        <CheckBox
            android:id="@+id/item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/intem3"/>

        <CheckBox
            android:id="@+id/item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/intem4"/>

        <CheckBox
            android:id="@+id/item5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/intem5"/>

        <CheckBox
            android:id="@+id/item6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/intem6"/>

        <CheckBox
            android:id="@+id/item7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/intem7"/>

        <CheckBox
            android:id="@+id/item8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/intem8"/>

        <CheckBox
            android:id="@+id/item9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/intem9"/>

        <Button
            android:id="@+id/okButtonInstituicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OK"
            android:gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>