<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textSize="40dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/instituicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instituicao"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/doador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doador"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>