<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doador"
        android:textSize="40dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/nomeDoador"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nome Completo"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/cpfDoador"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="CPF"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/enderecoDoador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Endereço"
        android:textSize="20dp" />

    <!--<Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Raio para doação"></Spinner>-->

    <EditText
        android:id="@+id/contatoDoador"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Contato"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/loginDoador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Login"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/senhaDoador"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Senha"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/itens_doador" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/intem1"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/intem2"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/intem3"/>

    <Button
        android:id="@+id/okButtonDoador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OK"
        android:gravity="center_horizontal"/>

   <!-- <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/intem4"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/intem5"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/intem6"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/intem7"/> -->


</LinearLayout>