<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_title"
        android:textSize="40dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="      login      "
                android:textSize="20dp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="  senha  "
                android:inputType="textPassword"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <Button
            android:id="@+id/logOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/logarFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_com_fb"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>